--- a/PartyMaker/Base.lproj/Main.storyboard
+++ b/PartyMaker/Base.lproj/Main.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="qNV-YE-6Aw">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="qNV-YE-6Aw">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <customFonts key="customFonts">
         <mutableArray key="MyriadProBold.ttf">
+            <string>MyriadPro-Bold</string>
             <string>MyriadPro-Bold</string>
             <string>MyriadPro-Bold</string>
         </mutableArray>
@@ -31,7 +32,7 @@
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" barStyle="black" translucent="NO" id="swc-OM-Bs7">
+                    <tabBar key="tabBar" contentMode="scaleToFill" translucent="NO" id="swc-OM-Bs7">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" red="0.18039215689999999" green="0.19215686269999999" blue="0.21960784310000001" alpha="1" colorSpace="calibratedRGB"/>
@@ -106,11 +107,63 @@
         <scene sceneID="kj9-NZ-1ck">
             <objects>
                 <tableViewController id="Gku-Vf-h7L" customClass="PAMPartiesTableViewController" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="0Rt-eg-Es1">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" sectionIndexMinimumDisplayRowCount="5" rowHeight="75" sectionHeaderHeight="28" sectionFooterHeight="28" id="0Rt-eg-Es1">
                         <rect key="frame" x="0.0" y="64" width="320" height="455"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.18039215689999999" green="0.19215686269999999" blue="0.21960784310000001" alpha="1" colorSpace="calibratedRGB"/>
-                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.20392156859999999" green="0.21960784310000001" blue="0.25882352939999997" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="separatorColor" red="0.38431372549999998" green="0.41176470590000003" blue="0.46666666670000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="PAMPartyTableCell" rowHeight="70" id="IIp-5o-i9w" customClass="PAMPartyTableCell">
+                                <rect key="frame" x="0.0" y="28" width="320" height="70"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" tableViewCell="IIp-5o-i9w" id="5sJ-9O-niX">
+                                    <rect key="frame" x="0.0" y="0.0" width="287" height="69.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YR3-Nh-pcn">
+                                            <rect key="frame" x="8" y="7" width="53.5" height="53.5"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="54" id="EUi-za-3lO"/>
+                                                <constraint firstAttribute="height" constant="54" id="OLa-9m-tCL"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kNG-q0-f6e">
+                                            <rect key="frame" x="71.5" y="42" width="207.5" height="18"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="18" id="J5O-pu-fcy"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                                            <color key="textColor" red="0.38431372549019605" green="0.41176470588235292" blue="0.46666666666666667" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jZ5-Zu-GPo">
+                                            <rect key="frame" x="71.5" y="16" width="205.5" height="18"/>
+                                            <fontDescription key="fontDescription" name="MyriadPro-Bold" family="Myriad Pro" pointSize="18"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="jZ5-Zu-GPo" firstAttribute="leading" secondItem="YR3-Nh-pcn" secondAttribute="trailing" constant="10" id="742-9z-8e1"/>
+                                        <constraint firstAttribute="trailing" secondItem="kNG-q0-f6e" secondAttribute="trailing" constant="8" id="9S4-3d-7gS"/>
+                                        <constraint firstItem="YR3-Nh-pcn" firstAttribute="top" secondItem="5sJ-9O-niX" secondAttribute="top" constant="7" id="Bss-in-k2a"/>
+                                        <constraint firstItem="kNG-q0-f6e" firstAttribute="leading" secondItem="YR3-Nh-pcn" secondAttribute="trailing" constant="10" id="CEt-rR-gpx"/>
+                                        <constraint firstAttribute="trailing" secondItem="jZ5-Zu-GPo" secondAttribute="trailing" constant="10" id="apX-Ru-YWt"/>
+                                        <constraint firstItem="jZ5-Zu-GPo" firstAttribute="top" secondItem="5sJ-9O-niX" secondAttribute="top" constant="16" id="iSj-ot-UCI"/>
+                                        <constraint firstItem="kNG-q0-f6e" firstAttribute="top" secondItem="jZ5-Zu-GPo" secondAttribute="bottom" constant="8" id="pXO-MR-BfA"/>
+                                        <constraint firstItem="YR3-Nh-pcn" firstAttribute="leading" secondItem="5sJ-9O-niX" secondAttribute="leading" constant="8" id="qdz-Tq-uCE"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <color key="backgroundColor" red="0.20392156859999999" green="0.21960784310000001" blue="0.25882352939999997" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="partyDateLabel" destination="kNG-q0-f6e" id="ee5-99-kef"/>
+                                    <outlet property="partyNameLabel" destination="jZ5-Zu-GPo" id="f0B-g3-5Cb"/>
+                                    <outlet property="patryTypeImage" destination="YR3-Nh-pcn" id="PTN-tJ-lVR"/>
+                                    <segue destination="2fe-aN-sli" kind="show" id="JF8-Lt-OOx"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
                         <sections/>
                         <connections>
                             <outlet property="dataSource" destination="Gku-Vf-h7L" id="XMe-Ry-aDX"/>
@@ -125,10 +178,11 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ol2-PV-gTM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1610.625" y="186.97183098591549"/>
+            <point key="canvasLocation" x="1610" y="186"/>
         </scene>
         <!--Parties-->
         <scene sceneID="MBG-le-2Pm">
@@ -161,6 +215,99 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tih-Q7-TSW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="856.875" y="186.97183098591549"/>
+        </scene>
+        <!--Show Party View Controller-->
+        <scene sceneID="cNB-Ky-EBy">
+            <objects>
+                <viewController id="2fe-aN-sli" customClass="PAMShowPartyViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="9Dk-th-Jmk"/>
+                        <viewControllerLayoutGuide type="bottom" id="9Wv-Qz-Bdr"/>
+                    </layoutGuides>
+                    <view key="view" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="IZ5-Iq-ytE">
+                        <rect key="frame" x="0.0" y="64" width="320" height="455"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DO3-K8-NHb">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="455"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="K7n-M3-0ma">
+                                        <rect key="frame" x="10" y="233" width="96.5" height="60"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="60" id="KDz-jV-he1"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tm2-8n-5ZH">
+                                        <rect key="frame" x="213.5" y="233" width="96.5" height="60"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="60" id="ht7-Zv-XBm"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wu5-9F-kVj">
+                                        <rect key="frame" x="111.5" y="233" width="97" height="60"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="60" id="Bg7-CY-s7u"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gH7-wR-jEW">
+                                        <rect key="frame" x="10" y="25" width="300" height="200"/>
+                                        <color key="backgroundColor" red="0.2666666667" green="0.28627450980000002" blue="0.32549019610000002" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="200" id="42A-jG-xQg"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="gH7-wR-jEW" firstAttribute="centerX" secondItem="DO3-K8-NHb" secondAttribute="centerX" id="3EJ-7c-iAS"/>
+                                    <constraint firstItem="gH7-wR-jEW" firstAttribute="centerX" secondItem="DO3-K8-NHb" secondAttribute="centerX" id="9p8-OS-2t4"/>
+                                    <constraint firstItem="gH7-wR-jEW" firstAttribute="leading" secondItem="DO3-K8-NHb" secondAttribute="leading" constant="10" id="Bd3-lT-c6m"/>
+                                    <constraint firstItem="K7n-M3-0ma" firstAttribute="leading" secondItem="DO3-K8-NHb" secondAttribute="leading" constant="10" id="CFk-oR-gPM"/>
+                                    <constraint firstItem="gH7-wR-jEW" firstAttribute="leading" secondItem="K7n-M3-0ma" secondAttribute="leading" id="DFH-DV-c7n"/>
+                                    <constraint firstItem="K7n-M3-0ma" firstAttribute="top" secondItem="gH7-wR-jEW" secondAttribute="bottom" constant="8" id="Dz1-h1-cjo"/>
+                                    <constraint firstItem="Tm2-8n-5ZH" firstAttribute="leading" secondItem="wu5-9F-kVj" secondAttribute="trailing" constant="5" id="EEu-gC-qgN"/>
+                                    <constraint firstItem="Tm2-8n-5ZH" firstAttribute="centerY" secondItem="K7n-M3-0ma" secondAttribute="centerY" id="EVY-ki-gyq"/>
+                                    <constraint firstAttribute="bottom" secondItem="gH7-wR-jEW" secondAttribute="bottom" constant="397" id="Jec-kN-Nfa"/>
+                                    <constraint firstItem="Tm2-8n-5ZH" firstAttribute="width" secondItem="K7n-M3-0ma" secondAttribute="width" id="Twk-MV-NST"/>
+                                    <constraint firstItem="wu5-9F-kVj" firstAttribute="top" secondItem="gH7-wR-jEW" secondAttribute="bottom" constant="8" id="Voc-JS-uPH"/>
+                                    <constraint firstItem="wu5-9F-kVj" firstAttribute="leading" secondItem="K7n-M3-0ma" secondAttribute="trailing" constant="5" id="cVf-6T-GnF"/>
+                                    <constraint firstItem="wu5-9F-kVj" firstAttribute="width" secondItem="K7n-M3-0ma" secondAttribute="width" id="gTt-U1-arp"/>
+                                    <constraint firstAttribute="trailing" secondItem="Tm2-8n-5ZH" secondAttribute="trailing" constant="10" id="gh9-ee-2ik"/>
+                                    <constraint firstAttribute="trailing" secondItem="gH7-wR-jEW" secondAttribute="trailing" constant="10" id="k97-AB-rRg"/>
+                                    <constraint firstItem="Tm2-8n-5ZH" firstAttribute="top" secondItem="gH7-wR-jEW" secondAttribute="bottom" constant="8" id="oRO-vc-9Nl"/>
+                                    <constraint firstItem="gH7-wR-jEW" firstAttribute="top" secondItem="DO3-K8-NHb" secondAttribute="top" constant="25" id="ydE-Ei-Pvb"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="9p8-OS-2t4"/>
+                                        <exclude reference="Bd3-lT-c6m"/>
+                                    </mask>
+                                </variation>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.20392156859999999" green="0.21960784310000001" blue="0.25882352939999997" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="DO3-K8-NHb" secondAttribute="bottom" id="8d2-Iy-eLl"/>
+                            <constraint firstItem="DO3-K8-NHb" firstAttribute="top" secondItem="IZ5-Iq-ytE" secondAttribute="top" id="Dya-gF-H1P"/>
+                            <constraint firstItem="DO3-K8-NHb" firstAttribute="leading" secondItem="IZ5-Iq-ytE" secondAttribute="leading" id="FRL-In-lof"/>
+                            <constraint firstItem="DO3-K8-NHb" firstAttribute="leading" secondItem="IZ5-Iq-ytE" secondAttribute="leading" id="YZx-4c-ze3"/>
+                            <constraint firstAttribute="trailing" secondItem="DO3-K8-NHb" secondAttribute="trailing" id="Z2J-NI-z5v"/>
+                            <constraint firstAttribute="trailing" secondItem="DO3-K8-NHb" secondAttribute="trailing" id="zEM-tt-hKx"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="YZx-4c-ze3"/>
+                                <exclude reference="Z2J-NI-z5v"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5dc-5t-hfZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2121" y="-456"/>
         </scene>
         <!--CREATE PARTY-->
         <scene sceneID="TrU-gd-w87">
