--- a/PartyMaker/Base.lproj/LaunchScreen.storyboard
+++ b/PartyMaker/Base.lproj/LaunchScreen.storyboard
@@ -1,29 +1,48 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" launchScreen="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="EHf-IW-A2E">
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="G3L-yr-EwV"/>
+                        <viewControllerLayoutGuide type="bottom" id="MlL-hX-zKN"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Splash" id="0p0-iY-auy">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Splash" translatesAutoresizingMaskIntoConstraints="NO" id="0p0-iY-auy">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                             </imageView>
                         </subviews>
+                        <constraints>
+                            <constraint firstItem="0p0-iY-auy" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="IiF-KJ-v9Y"/>
+                            <constraint firstItem="MlL-hX-zKN" firstAttribute="top" secondItem="0p0-iY-auy" secondAttribute="bottom" id="M3g-vG-tQx"/>
+                            <constraint firstAttribute="trailing" secondItem="0p0-iY-auy" secondAttribute="trailing" id="NkK-v5-g3p"/>
+                            <constraint firstItem="0p0-iY-auy" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="topMargin" id="cua-SJ-sxS"/>
+                            <constraint firstItem="MlL-hX-zKN" firstAttribute="top" secondItem="0p0-iY-auy" secondAttribute="bottom" id="fAD-sA-QIh"/>
+                            <constraint firstItem="0p0-iY-auy" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="hOf-6j-5H0"/>
+                            <constraint firstItem="0p0-iY-auy" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="zrr-KV-ezL"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="IiF-KJ-v9Y"/>
+                                <exclude reference="fAD-sA-QIh"/>
+                            </mask>
+                        </variation>
                     </view>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="336" y="343"/>
+            <point key="canvasLocation" x="630" y="362.32394366197178"/>
         </scene>
     </scenes>
     <resources>
